// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render while loading 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <styled.div />
  </styled.div>
  <Footer />
</styled.div>
`;

exports[`render with errors 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "browserName": "safari",
            "browserVersion": 7,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": 7,
            "osversion": "7",
            "safari": true,
            "webkit": true,
            "windows": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": true,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": 7,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {
              "alignContent": true,
              "alignItems": true,
              "alignSelf": true,
              "animation": true,
              "animationDelay": true,
              "animationDirection": true,
              "animationDuration": true,
              "animationFillMode": true,
              "animationIterationCount": true,
              "animationName": true,
              "animationPlayState": true,
              "animationTimingFunction": true,
              "appearance": true,
              "backdropFilter": true,
              "backfaceVisibility": true,
              "boxDecorationBreak": true,
              "breakAfter": true,
              "breakBefore": true,
              "breakInside": true,
              "clipPath": true,
              "columnCount": true,
              "columnFill": true,
              "columnGap": true,
              "columnRule": true,
              "columnRuleColor": true,
              "columnRuleStyle": true,
              "columnRuleWidth": true,
              "columnSpan": true,
              "columnWidth": true,
              "columns": true,
              "filter": true,
              "flex": true,
              "flexBasis": true,
              "flexDirection": true,
              "flexFlow": true,
              "flexGrow": true,
              "flexShrink": true,
              "flexWrap": true,
              "flowFrom": true,
              "flowInto": true,
              "fontKerning": true,
              "hyphens": true,
              "justifyContent": true,
              "mask": true,
              "maskBorder": true,
              "maskBorderMode": true,
              "maskBorderOutset": true,
              "maskBorderRepeat": true,
              "maskBorderSlice": true,
              "maskBorderSource": true,
              "maskBorderWidth": true,
              "maskClip": true,
              "maskComposite": true,
              "maskImage": true,
              "maskMode": true,
              "maskOrigin": true,
              "maskPosition": true,
              "maskRepeat": true,
              "maskSize": true,
              "maskType": true,
              "order": true,
              "perspective": true,
              "perspectiveOrigin": true,
              "regionFragment": true,
              "scrollSnapCoordinate": true,
              "scrollSnapDestination": true,
              "scrollSnapPointsX": true,
              "scrollSnapPointsY": true,
              "scrollSnapType": true,
              "shapeImageMargin": true,
              "shapeImageOutside": true,
              "shapeImageThreshold": true,
              "textDecorationColor": true,
              "textDecorationLine": true,
              "textDecorationSkip": true,
              "textDecorationStyle": true,
              "transform": true,
              "transformOrigin": true,
              "transformOriginX": true,
              "transformOriginY": true,
              "transformOriginZ": true,
              "transformStyle": true,
              "userSelect": true,
            },
          },
          "_requiresPrefix": Object {
            "alignContent": true,
            "alignItems": true,
            "alignSelf": true,
            "animation": true,
            "animationDelay": true,
            "animationDirection": true,
            "animationDuration": true,
            "animationFillMode": true,
            "animationIterationCount": true,
            "animationName": true,
            "animationPlayState": true,
            "animationTimingFunction": true,
            "appearance": true,
            "backdropFilter": true,
            "backfaceVisibility": true,
            "boxDecorationBreak": true,
            "breakAfter": true,
            "breakBefore": true,
            "breakInside": true,
            "clipPath": true,
            "columnCount": true,
            "columnFill": true,
            "columnGap": true,
            "columnRule": true,
            "columnRuleColor": true,
            "columnRuleStyle": true,
            "columnRuleWidth": true,
            "columnSpan": true,
            "columnWidth": true,
            "columns": true,
            "filter": true,
            "flex": true,
            "flexBasis": true,
            "flexDirection": true,
            "flexFlow": true,
            "flexGrow": true,
            "flexShrink": true,
            "flexWrap": true,
            "flowFrom": true,
            "flowInto": true,
            "fontKerning": true,
            "hyphens": true,
            "justifyContent": true,
            "mask": true,
            "maskBorder": true,
            "maskBorderMode": true,
            "maskBorderOutset": true,
            "maskBorderRepeat": true,
            "maskBorderSlice": true,
            "maskBorderSource": true,
            "maskBorderWidth": true,
            "maskClip": true,
            "maskComposite": true,
            "maskImage": true,
            "maskMode": true,
            "maskOrigin": true,
            "maskPosition": true,
            "maskRepeat": true,
            "maskSize": true,
            "maskType": true,
            "order": true,
            "perspective": true,
            "perspectiveOrigin": true,
            "regionFragment": true,
            "scrollSnapCoordinate": true,
            "scrollSnapDestination": true,
            "scrollSnapPointsX": true,
            "scrollSnapPointsY": true,
            "scrollSnapType": true,
            "shapeImageMargin": true,
            "shapeImageOutside": true,
            "shapeImageThreshold": true,
            "textDecorationColor": true,
            "textDecorationLine": true,
            "textDecorationSkip": true,
            "textDecorationStyle": true,
            "transform": true,
            "transformOrigin": true,
            "transformOriginX": true,
            "transformOriginY": true,
            "transformOriginZ": true,
            "transformStyle": true,
            "userSelect": true,
          },
          "_userAgent": "Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.2 (KHTML, like Gecko) Safari/537.2",
          "prefixedKeyframes": "-webkit-keyframes",
        }
      }
      primary="first"
      split="vertical"
    >
      <Connect(Editor) />
      <styled.div>
        <Connect(Options) />
        <Connect(UASTViewer) />
      </styled.div>
    </SplitPane>
  </styled.div>
  <Footer />
  <Notifications>
    <Error
      message="error1"
      onRemove={[Function]}
    />
    <Error
      message="error2"
      onRemove={[Function]}
    />
  </Notifications>
</styled.div>
`;

exports[`renders without crashing 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "browserName": "safari",
            "browserVersion": 7,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": 7,
            "osversion": "7",
            "safari": true,
            "webkit": true,
            "windows": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": true,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": 7,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {
              "alignContent": true,
              "alignItems": true,
              "alignSelf": true,
              "animation": true,
              "animationDelay": true,
              "animationDirection": true,
              "animationDuration": true,
              "animationFillMode": true,
              "animationIterationCount": true,
              "animationName": true,
              "animationPlayState": true,
              "animationTimingFunction": true,
              "appearance": true,
              "backdropFilter": true,
              "backfaceVisibility": true,
              "boxDecorationBreak": true,
              "breakAfter": true,
              "breakBefore": true,
              "breakInside": true,
              "clipPath": true,
              "columnCount": true,
              "columnFill": true,
              "columnGap": true,
              "columnRule": true,
              "columnRuleColor": true,
              "columnRuleStyle": true,
              "columnRuleWidth": true,
              "columnSpan": true,
              "columnWidth": true,
              "columns": true,
              "filter": true,
              "flex": true,
              "flexBasis": true,
              "flexDirection": true,
              "flexFlow": true,
              "flexGrow": true,
              "flexShrink": true,
              "flexWrap": true,
              "flowFrom": true,
              "flowInto": true,
              "fontKerning": true,
              "hyphens": true,
              "justifyContent": true,
              "mask": true,
              "maskBorder": true,
              "maskBorderMode": true,
              "maskBorderOutset": true,
              "maskBorderRepeat": true,
              "maskBorderSlice": true,
              "maskBorderSource": true,
              "maskBorderWidth": true,
              "maskClip": true,
              "maskComposite": true,
              "maskImage": true,
              "maskMode": true,
              "maskOrigin": true,
              "maskPosition": true,
              "maskRepeat": true,
              "maskSize": true,
              "maskType": true,
              "order": true,
              "perspective": true,
              "perspectiveOrigin": true,
              "regionFragment": true,
              "scrollSnapCoordinate": true,
              "scrollSnapDestination": true,
              "scrollSnapPointsX": true,
              "scrollSnapPointsY": true,
              "scrollSnapType": true,
              "shapeImageMargin": true,
              "shapeImageOutside": true,
              "shapeImageThreshold": true,
              "textDecorationColor": true,
              "textDecorationLine": true,
              "textDecorationSkip": true,
              "textDecorationStyle": true,
              "transform": true,
              "transformOrigin": true,
              "transformOriginX": true,
              "transformOriginY": true,
              "transformOriginZ": true,
              "transformStyle": true,
              "userSelect": true,
            },
          },
          "_requiresPrefix": Object {
            "alignContent": true,
            "alignItems": true,
            "alignSelf": true,
            "animation": true,
            "animationDelay": true,
            "animationDirection": true,
            "animationDuration": true,
            "animationFillMode": true,
            "animationIterationCount": true,
            "animationName": true,
            "animationPlayState": true,
            "animationTimingFunction": true,
            "appearance": true,
            "backdropFilter": true,
            "backfaceVisibility": true,
            "boxDecorationBreak": true,
            "breakAfter": true,
            "breakBefore": true,
            "breakInside": true,
            "clipPath": true,
            "columnCount": true,
            "columnFill": true,
            "columnGap": true,
            "columnRule": true,
            "columnRuleColor": true,
            "columnRuleStyle": true,
            "columnRuleWidth": true,
            "columnSpan": true,
            "columnWidth": true,
            "columns": true,
            "filter": true,
            "flex": true,
            "flexBasis": true,
            "flexDirection": true,
            "flexFlow": true,
            "flexGrow": true,
            "flexShrink": true,
            "flexWrap": true,
            "flowFrom": true,
            "flowInto": true,
            "fontKerning": true,
            "hyphens": true,
            "justifyContent": true,
            "mask": true,
            "maskBorder": true,
            "maskBorderMode": true,
            "maskBorderOutset": true,
            "maskBorderRepeat": true,
            "maskBorderSlice": true,
            "maskBorderSource": true,
            "maskBorderWidth": true,
            "maskClip": true,
            "maskComposite": true,
            "maskImage": true,
            "maskMode": true,
            "maskOrigin": true,
            "maskPosition": true,
            "maskRepeat": true,
            "maskSize": true,
            "maskType": true,
            "order": true,
            "perspective": true,
            "perspectiveOrigin": true,
            "regionFragment": true,
            "scrollSnapCoordinate": true,
            "scrollSnapDestination": true,
            "scrollSnapPointsX": true,
            "scrollSnapPointsY": true,
            "scrollSnapType": true,
            "shapeImageMargin": true,
            "shapeImageOutside": true,
            "shapeImageThreshold": true,
            "textDecorationColor": true,
            "textDecorationLine": true,
            "textDecorationSkip": true,
            "textDecorationStyle": true,
            "transform": true,
            "transformOrigin": true,
            "transformOriginX": true,
            "transformOriginY": true,
            "transformOriginZ": true,
            "transformStyle": true,
            "userSelect": true,
          },
          "_userAgent": "Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.2 (KHTML, like Gecko) Safari/537.2",
          "prefixedKeyframes": "-webkit-keyframes",
        }
      }
      primary="first"
      split="vertical"
    >
      <Connect(Editor) />
      <styled.div>
        <Connect(Options) />
        <Connect(UASTViewer) />
      </styled.div>
    </SplitPane>
  </styled.div>
  <Footer />
</styled.div>
`;
